--- a/FastMoq.Tests.Blazor/FastMoq.Tests.Blazor.csproj
+++ b/FastMoq.Tests.Blazor/FastMoq.Tests.Blazor.csproj
@@ -5,10 +5,15 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
-<ItemGroup>
-  <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="*" />
-</ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="*" />
+  </ItemGroup>
 
 </Project>
