--- a/FastMoq.TestingExample/FastMoq.TestingExample.csproj
+++ b/FastMoq.TestingExample/FastMoq.TestingExample.csproj
@@ -2,8 +2,9 @@
   <PropertyGroup>
     <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
-      <LangVersion>latest</LangVersion>
+      <LangVersion>preview</LangVersion>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="*" />
@@ -16,6 +17,11 @@
     </PackageReference>
     <PackageReference Include="Xunit.StaFact" Version="1.1.11" />
   </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\FastMoq.Core\FastMoq.Core.csproj" />
   </ItemGroup>
