--- a/FastMoq.Tests.Blazor/FastMoq.Tests.Blazor.csproj
+++ b/FastMoq.Tests.Blazor/FastMoq.Tests.Blazor.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="*" />
+    <ProjectReference Include="..\FastMoq.Core\FastMoq.Core.csproj" />
   </ItemGroup>
 
 </Project>
