--- a/FastMoq.Core/FastMoq.Core.nuspec
+++ b/FastMoq.Core/FastMoq.Core.nuspec
@@ -14,22 +14,22 @@
     <repository type="git" url="https://github.com/cwinland/FastMoq" />
     <dependencies>
       <group targetFramework="net6.0">
-        <dependency id="Microsoft.EntityFrameworkCore.Sqlite" version="6.0.29" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.Extensions.Http" version="6.0.0" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.EntityFrameworkCore.Sqlite" version="6.0.35" exclude="Build,Analyzers" />
         <dependency id="Moq" version="4.18.4" exclude="Build,Analyzers" />
-        <dependency id="TestableIO.System.IO.Abstractions.TestingHelpers" version="21.0.2" exclude="Build,Analyzers" />
+        <dependency id="System.IO.Abstractions.TestingHelpers" version="17.2.3" exclude="Build,Analyzers" />
+        <dependency id="xunit.abstractions" version="2.0.3" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0">
-        <dependency id="Microsoft.EntityFrameworkCore.Sqlite" version="7.0.18" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.Extensions.Http" version="7.0.0" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.EntityFrameworkCore.Sqlite" version="7.0.20" exclude="Build,Analyzers" />
         <dependency id="Moq" version="4.18.4" exclude="Build,Analyzers" />
-        <dependency id="TestableIO.System.IO.Abstractions.TestingHelpers" version="21.0.2" exclude="Build,Analyzers" />
+        <dependency id="TestableIO.System.IO.Abstractions.TestingHelpers" version="19.2.91" exclude="Build,Analyzers" />
+        <dependency id="xunit.abstractions" version="2.0.3" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net8.0">
-        <dependency id="Microsoft.EntityFrameworkCore.Sqlite" version="8.0.4" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.Extensions.Http" version="8.0.0" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.EntityFrameworkCore.Sqlite" version="8.0.10" exclude="Build,Analyzers" />
         <dependency id="Moq" version="4.18.4" exclude="Build,Analyzers" />
-        <dependency id="TestableIO.System.IO.Abstractions.TestingHelpers" version="21.0.2" exclude="Build,Analyzers" />
+        <dependency id="TestableIO.System.IO.Abstractions.TestingHelpers" version="21.0.29" exclude="Build,Analyzers" />
+        <dependency id="xunit.abstractions" version="2.0.3" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
