--- a/FastMoq.Core/FastMoq.Core.csproj
+++ b/FastMoq.Core/FastMoq.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
@@ -15,7 +15,7 @@
     <PackageProjectUrl>https://github.com/cwinland/FastMoq</PackageProjectUrl>
     <RepositoryUrl>https://github.com/cwinland/FastMoq</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>Easy;fast;injection;inject;mock;extension;Moq;moqthis;framework;mocking;class</PackageTags>
+    <PackageTags>Easy;fast;injection;inject;mock;extension;Moq;framework;mocking;class</PackageTags>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <IsPackable>true</IsPackable>
@@ -50,17 +50,21 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
 
     <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="17.2.3" Condition="'$(TargetFramework)' == 'net6.0'" />
-    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="21.*" Condition="'$(TargetFramework)' == 'net8.0'" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="*" Condition="'$(TargetFramework)' == 'net8.0'" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="*" Condition="'$(TargetFramework)' == 'net9.0'" />
 
-    <PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.11.1">
+    <!-- Will never upgrade over 4.18.* -->
+    <PackageReference Include="Moq" Version="4.18.*" />
+
+    <PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.13.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; buildtransitive</IncludeAssets>
       <ExcludeAssets>analyzers</ExcludeAssets>
-    </PackageReference>    
-    <PackageReference Include="Moq" Version="4.18.*" />
-    <PackageReference Include="coverlet.collector" Version="6.0.2">
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; buildtransitive</IncludeAssets>
       <ExcludeAssets>analyzers</ExcludeAssets>
