--- a/FastMoq.Web/FastMoq.Web.csproj
+++ b/FastMoq.Web/FastMoq.Web.csproj
@@ -47,8 +47,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.2" />
-    <PackageReference Include="bunit" Version="1.38.5" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.2" Condition="'$(TargetFramework)' == 'net9.0'" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.2" Condition="'$(TargetFramework)' == 'net8.0'" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" Condition="'$(TargetFramework)' == 'net6.0'" />
+
+    <PackageReference Include="bunit" Version="1.35.3" Condition="'$(TargetFramework)' == 'net6.0'" />
+    <PackageReference Include="bunit" Version="1.38.5" Condition="'$(TargetFramework)' == 'net8.0'" />
+    <PackageReference Include="bunit" Version="1.38.5" Condition="'$(TargetFramework)' == 'net9.0'" />
+    
     <PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.13.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; buildtransitive</IncludeAssets>
