--- a/.github/workflows/pr_FastMoq.yml
+++ b/.github/workflows/pr_FastMoq.yml
@@ -23,8 +23,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+            fetch-depth: 0
       - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 9.0.x
       - name: Install dependencies
