--- a/.github/workflows/pr_FastMoq.yml
+++ b/.github/workflows/pr_FastMoq.yml
@@ -25,6 +25,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
             fetch-depth: 0
+      - name: Setup .NET 6.0
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 6.0.x
+      - name: Setup .NET 8.0
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8.0.x
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
