--- a/.github/workflows/pr_FastMoq.yml
+++ b/.github/workflows/pr_FastMoq.yml
@@ -14,8 +14,6 @@ on:
       - FastMoq.Web/
       - FastMoq.Tests/
       - FastMoq.Tests.Web/
-      - FastMoq.Tests.Blazor/
-      - FastMoq.TestingExample/
 
 jobs:
   codeql:
@@ -42,8 +40,10 @@ jobs:
         with:
           dotnet-version: 9.0.x
       - name: Install dependencies
-        run: dotnet restore FastMoq.sln --source https://api.nuget.org/v3/index.json
+        run: dotnet restore FastMoq.Tests/FastMoq.Tests.csproj --source https://api.nuget.org/v3/index.json && dotnet restore FastMoq.Tests.Web/FastMoq.Tests.Web.csproj --source https://api.nuget.org/v3/index.json
       - name: Build
-        run: dotnet build FastMoq.sln --source https://api.nuget.org/v3/index.json
-      - name: Test
-        run: dotnet test FastMoq.sln --filter "FullyQualifiedName!~FastMoq.Tests.Blazor"
+        run: dotnet build FastMoq.Tests/FastMoq.Tests.csproj --source https://api.nuget.org/v3/index.json && dotnet build FastMoq.Tests.Web/FastMoq.Tests.Web.csproj --source https://api.nuget.org/v3/index.json
+      - name: Test FastMoq.Tests
+        run: dotnet test FastMoq.Tests/FastMoq.Tests.csproj --source https://api.nuget.org/v3/index.json
+      - name: Test FastMoq.Tests.Web
+        run: dotnet test FastMoq.Tests.Web/FastMoq.Tests.Web.csproj --source https://api.nuget.org/v3/index.json
