--- a/FastMoq.Core/FastMoq.Core.csproj
+++ b/FastMoq.Core/FastMoq.Core.csproj
@@ -52,12 +52,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" PrivateAssets="*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" PrivateAssets="*" />
 
-    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="17.2.3" Condition="'$(TargetFramework)' == 'net6.0'" PrivateAssets="*" />
-    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="21.3.1" Condition="'$(TargetFramework)' == 'net8.0'" PrivateAssets="*" />
-    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="21.3.1" Condition="'$(TargetFramework)' == 'net9.0'" PrivateAssets="*" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="[17.2.3]" Condition="'$(TargetFramework)' == 'net6.0'" PrivateAssets="*" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="[21.3.1]" Condition="'$(TargetFramework)' == 'net8.0'" PrivateAssets="*" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="[21.3.1]" Condition="'$(TargetFramework)' == 'net9.0'" PrivateAssets="*" />
 
     <!-- Will never upgrade over 4.18.* -->
-    <PackageReference Include="Moq" Version="4.18.*" />
+    <PackageReference Include="Moq" Version="[4.18.4]" />
 
     <PackageReference Include="NuGet.Build.Tasks.Pack" Version="6.13.2">
       <PrivateAssets>all</PrivateAssets>
