--- a/FastMoq.TestingExample/FastMoq.TestingExample.csproj
+++ b/FastMoq.TestingExample/FastMoq.TestingExample.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="*" />
     <!-- Will never upgrade over 7.* -->
-    <PackageReference Include="FluentAssertions" Version="7.*" />
+    <PackageReference Include="FluentAssertions" Version="[7.2.0]" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
       <PrivateAssets>all</PrivateAssets>
