--- a/.github/workflows/ci_master.yml
+++ b/.github/workflows/ci_master.yml
@@ -22,10 +22,10 @@ jobs:
             9.0.x
 
       - name: Restore
-        run: dotnet restore
-
+        run: dotnet restore FastMoq.sln
+      
       - name: Build
-        run: dotnet build --no-restore --configuration Release
-
+        run: dotnet build FastMoq.sln --no-restore --configuration Release
+      
       - name: Test
-        run: dotnet test --no-build --configuration Release --verbosity normal
+        run: dotnet test FastMoq.sln --no-build --configuration Release --verbosity normal
